--- a/build.gradle
+++ b/build.gradle
@@ -22,10 +22,10 @@ repositories {
 
 dependencies {
     // This dependency is found on compile classpath of this component and consumers.
-    implementation 'com.google.guava:guava:27.0.1-jre'
-
+    implementation 'org.apache.commons:commons-io:1.3.2'
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
+    testImplementation 'org.assertj:assertj-core:3.13.1'
 }
 
 // Define the main class for the application
