--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ plugins {
     id 'idea'
     // Apply the application plugin to add support for building an application
     id 'application'
+    id 'jacoco'
 }
 
 repositories {
@@ -30,3 +31,53 @@ dependencies {
 
 // Define the main class for the application
 mainClassName = 'com.refactor.practice.App'
+
+// tag::jacoco-configuration[]
+jacoco {
+    toolVersion = "0.8.4"
+    reportsDir = file("$buildDir/customJacocoReportDir")
+}
+// end::jacoco-configuration[]
+// tag::testtask-configuration[]
+test {
+    jacoco {
+        destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
+        classDumpDir = file("$buildDir/jacoco/classpathdumps")
+    }
+}
+// end::testtask-configuration[]
+
+
+// tag::report-configuration[]
+jacocoTestReport {
+    reports {
+        xml.enabled false
+        csv.enabled false
+        html.destination file("${buildDir}/jacocoHtml")
+    }
+}
+// end::report-configuration[]
+
+// tag::violation-rules-configuration[]
+jacocoTestCoverageVerification {
+    violationRules {
+        rule {
+            limit {
+                minimum = 0.5
+            }
+        }
+
+        rule {
+            enabled = false
+            element = 'CLASS'
+            includes = ['org.gradle.*']
+
+            limit {
+                counter = 'LINE'
+                value = 'TOTALCOUNT'
+                maximum = 0.3
+            }
+        }
+    }
+}
+// end::violation-rules-configuration[]
